app/static/css/dark.css
/* dark mode styles */
body.dark .th-l-stroke {
  stroke: var(--dark-primary-color);
}

body.dark .th-l-fill {
  fill: var(--dark-primary-color);
}

body.dark code,
body.dark pre {
  background: #a9989836;
}

body.dark .profilebadge path:not(.nocolor) {
  fill: #686868;
}

body.dark .th-toggle .bar {
  background-color: #666;
}

body.dark a {
  color: #8f8f8f;
}

body.dark div.author a {
  color: var(--dark-links-a);
}

body.dark div.author a.authorlink {
  color: #526a7d;
}

body.dark .content,
body.dark #container2 {
  color: #c1c1c1;
}

body.dark .hasmail i {
  color: #4f5d66;
}

body.dark #toggledark i {
  color: #526a7d;
}

body.dark .postflair {
  background-color: #000;
  color: #7d7d7d;
  border: 1px solid #1d1d1d;
}

body.dark .user_flair {
  background-color: #0d0d0d;
  border: 1px solid #1d1d1d;
  color: #888;
}

/* Hot, Top, New, Domain */

body.dark div#sortbuttons span {
  color: #ddd;
  background-color: #101010;
}

body.dark div#sortbuttons {
  color: #526a7d;
}

body.dark a:hover,
body.dark #sortbuttons a:hover {
  color: #4f5d66;
}

body.dark .post .domain a,
body.dark .post .domain {
  color: #555;
}

/* Header */

body.dark .th-navbar {
  background-color: #2f3136;
  -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.75);
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.75);
}

/* Footer */

body.dark .footer {
  color: #c1c1c1;
/*  background-color: #373a3f; */
}

/* body.dark .th-navbar.open {
  background-color: #000;
    -webkit-box-shadow: 0 2px 3px 0 var(--dark-shadow);
    -moz-box-shadow: 0 2px 3px 0 var(--dark-shadow);
    box-shadow: 0 2px 3px 0 var(--dark-shadow);
} */

/* Sub bar */

body.dark .th-subbar {
  background-color: #202225;
  border-bottom: 1px solid #40444b;
}

body.dark .th-subbar ul li {
  color: #cdcdcd;
}

body.dark .th-subbar a {
  color: #ccc;
}

body.dark .th-subbar a:hover {
  color: var(--dark-primary-color);
}

/* Posts */
/*
body.dark .comments article.comment.highlight {
  background-color: #40444b;
}
*/
body.dark #container {
  background: #373a3f;
}

body.dark #center-container {
  background-color: transparent;
}

body.dark .wholepost {
  background-color: transparent;
}

body.dark .pbody {
  background: #373a3f;
  display: inline-block;
  width: calc(100% - 130px);
  padding: 5px 10px 5px 5px;
  border: none;
  box-shadow: none;
}

body.dark .pbody:hover {
  box-shadow: none;
}

body.dark .post {
  background-color: #373a3f;
}

body.dark .post:nth-child(2n) {
  background-color: #373a3f;
  -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);

}

body.dark .pchild {
  margin-left: 26px;
  border-left: 1px dotted #65686b;
}

body.dark .votebuttons {
  fill: #7d7d7d;
  color: #7d7d7d;
}

body.dark .post .title {
  color: #ccc;
}

body.dark .post a.title:hover {
  color: var(--dark-primary-color);
}

body.dark .post .title:visited {
  color: var(--dark-links-visited);
}

body.dark .post .author {
  color: #7b7b7b;
}

body.dark .thumbnail .placeholder svg path {
  fill: #555;
}

body.dark .post .thumbnail img {
  -webkit-filter: grayscale(50%);
  -moz-filter: grayscale(50%);
  filter: grayscale(50%);
}

body.dark .post .thumbnail img {
  -webkit-filter: grayscale(50%);
  -moz-filter: grayscale(50%);
  filter: grayscale(50%);
}

body.dark .post .thumbnail img:hover {
  -webkit-filter: grayscale(0);
  -moz-filter: grayscale(0);
  filter: grayscale(0);
}

body.dark .p-icon[data-icon="exclaim"] path {
  fill: #8c8c8c;
}

/* Buttons */

body.dark .pure-button.button-transparent,
body.dark .pure-button.button-transparent:hover {
  background: none;
}

body.dark .button-secondary,
body.dark .pure-button {
  background: #202225;
  color: #b9bbbe;
  border: 1px solid transparent;
}

body.dark .inboxside .button-secondary {
  background: rgba(51, 51, 51, 0.2);
}

body.dark .button-secondary:hover,
body.dark .pure-button:hover {
  background: #40444b;
  color: #b9bbbe;
}

body.dark .pure-button-primary {
  background-color: #202225;
}

body.dark a#nextp,
body.dark a#prevp {
  color: #c0c0c0;
}

body.dark a#nextp:hover,
body.dark a#prevp:hover {
  color: #ffffff;
}

body.dark .pure-button.button-warning {
  background: #202225;
}


/* Expandos */

body.dark .expando {
  background-color: #0a0a0a;
}

body.dark .post .expandotxt,
body.dark .post:nth-child(2n) .expandotxt {
/*  background-color: #202225; */
  color: #aaa;
}

body.dark .pure-control-group label,
body.dark .form label {
  color: #526a7d;
}

body.dark input[type="text"]:not(.numInput),
body.dark input[type="email"],
body.dark input[type="url"],
body.dark textarea,
body.dark input[type="password"],
body.dark select {
  color: #d7ddde;
  background-color: #40444b;
  box-shadow: inset 0 1px 3px #303030;
  border-color: #444;
}

body.dark textarea {
  background-color: #a0a0a0;
}

body.dark {
  color: #666;
}

body.dark .post-content-container,
body.dark .poll-space {
  background: #40444b;
  color: #b9bbbe
}

body.dark .editbtns {
  border-color: #444;
}

body.dark .editbtns div {
  border-color: #292929;
}

body.dark .editbtns svg path {
  fill: #666;
}

body.dark input[type="text"]::placeholder,
body.dark input[type="email"]::placeholder,
body.dark input[type="url"]::placeholder,
body.dark textarea::placeholder,
body.dark input[type="password"]::placeholder {
  color: #555;
}

body.dark input#buyamount~b {
  color: #c2c2c2;
}

/* Sidebar */
body.dark .sidebar {
  background-color: #2f3136;
  border: solid 1px #202225;
  border-bottom: none;
  background: none;

}

body.dark .sidebar p {
  color: #8f8f8f !important;
}

body.dark .sidebar h4 {
  color: #ccc;
}

body.dark input[type="search"] {
  background-color: #202225;
  color: #fff;
  border-color: #40444b;
}

body.dark .flairpicker select {
  background-color: #000;
  color: #fff;
  border-color: #40444b;
}

body.dark .sidebar ul.top5 li a {
  color: #717171;
}
/* ... */

